school-system/src/main/java/com/example/school/system/error/AdminResourceException.java
package com.example.school.system.error;

public class AdminResourceException extends RuntimeException {
    public AdminResourceException(String message) {
        super(message);
    }
}
